<resources>
    <string name="app_name">Aplikasi KPU</string>
    <string name="information">Informasi</string>
    <string name="form_entry">Form Entry</string>
    <string name="lihat_data">Lihat Data</string>
    <string name="keluar">Keluar</string>
    <string name="nik">NIK</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="save">Simpan</string>
    <string name="handphone">Nomor HP</string>
    <string name="sex">Jenis Kelamin</string>
    <string name="detail">Detail</string>
    <string name="delete">Delete</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="current_location">Lokasi TPS</string>
</resources>