<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".ui.MainActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:id="@+id/logo"
        android:src="@drawable/pemilu"
        android:layout_marginBottom="16dp"/>


    <Button
        android:id="@+id/btn_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/information"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/btn_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_entry"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/btn_lihat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lihat_data"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/btn_cek_lokasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_location"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/btn_keluar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/keluar"/>
</LinearLayout>